--- a/practical1.html
+++ b/practical1.html
@@ -1,8 +1,10 @@
 <html>
   <head></head>
     <body>
-      <scipt>
-        consol.log("Hello");
-      </scipt>
+      <script>
+        console.log("Hello");
+        document.write("hii");
+        alert("hoo");
+      </script>
     </body>
 </html>
